[FIX] vertical align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,14 @@ body {
 	color: white;
 	background-color: #B0B0B0;
 	font-family: 'PT Serif', serif;
-	text-align: center;
+  text-align: center;
+}
+
+.info{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 30%;
+  width: 50%;
+  margin: -15% 0 0 -25%;
 }
